Change project details and feature description
Updated project location and status, and modified feature description.

--- a/index.html
+++ b/index.html
@@ -748,7 +748,7 @@ footer {
                 <div class="project-meta">
                     <div class="meta-item">
                         <div class="meta-label">Location</div>
-                        <div class="meta-value">Prime Urban District</div>
+                        <div class="meta-value">Opposite Mulund East Railway Station</div>
                     </div>
                     <div class="meta-item">
                         <div class="meta-label">Type</div>
@@ -756,7 +756,7 @@ footer {
                     </div>
                     <div class="meta-item">
                         <div class="meta-label">Status</div>
-                        <div class="meta-value">Ready to Move</div>
+                        <div class="meta-value">Work in Progress</div>
                     </div>
                     <div class="meta-item">
                         <div class="meta-label">Units</div>
@@ -814,9 +814,9 @@ footer {
 
                 <div class="feature-item">
                     <div class="feature-icon">✱</div>
-                    <h3 class="feature-title">Green Spaces</h3>
+                    <h3 class="feature-title">Rooftop Garden</h3>
                     <p class="feature-description">
-                        Thoughtfully integrated landscaping that brings nature into your everyday living experience.
+                        A thoughtfully designed rooftop garden offers a peaceful green escape with open views, ideal for everyday relaxation.
                     </p>
                 </div>
 
