Fix option values in interest select dropdown

--- a/index.html
+++ b/index.html
@@ -961,9 +961,9 @@ footer {
                     <label class="form-label" for="interest">Interested In</label>
                     <select id="interest" name="interest" class="form-input">
                         <option value="">Select an option</option>
-                        <option value="2 BHK">1 BHK(420Sq.ft.)</option>
-                        <option value="3 BHK">1 BHK(413Sq.ft.)</option>
-                        <option value="4 BHK">3 BHK Jodi Flat</option>
+                        <option value="1 BHK(420Sq.ft.)">1 BHK(420Sq.ft.)</option>
+                        <option value="1 BHK (413Sq.ft.)">1 BHK(413Sq.ft.)</option>
+                        <option value="3 BHK Jodi Flat">3 BHK Jodi Flat</option>
                         <option value="General Inquiry">General Inquiry</option>
                     </select>
                 </div>
