Change hover color for cta-button

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ nav {
 
 .cta-button:hover {
     border-color: var(--accent-gold);
-    color: var(--primary-dark);
+    color: var(--primary-light);
 }
 
 /* Project Section */
